# 3DOutdoor

./: _ReadMe.txt
Data/Disparity Images/: README.md
Data/Uncalibrated Checkerboard Images/: README.md
Data/Uncalibrated Images/: README.md
Docs/: README.md
Docs/Step01 - Hardware/ExtraDocs/: _ReadMe.txt
Src/: _ReadMe.txt
Src/Calibration - MATLAB/: README.md
Src/Disparity Computation - C++ and MATLAB/: README.md
Src/Disparity Computation - C++ and MATLAB/C++/: CMakeLists.txt  CompConfidence.hpp  Main_CompDisparityConfidence.cpp  stereosgbm_cost.cpp
Src/Disparity Computation - C++ and MATLAB/C++/input/: Config.xml  ImgList.xml  extrinsics.yml  intrinsics.yml  sgbmPara.yml
Src/Disparity Computation - C++ and MATLAB/MATLAB/: Run_ShowCost.m
Src/Occupancy Grid Computation - MATLAB/: 0000000078.txt  0000000079.txt  0000000080.txt  0000000081.txt  0000000082.txt  0000000083.txt  occupancy_github.m
Src/Triggering Code for Beaglebone - Shell Script/: _ReadMe.txt  trigger_code.sh
